# uvm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/uvm/: __init__.py  _version.py
src/uvm/core/: env_manager.py  registry.py
src/uvm/scripts/: verify_installation.py
src/uvm/utilities/: path_utils.py
tests/: __init__.py  conftest.py
tests/unit/core/: test_env_manager.py  test_registry.py
tests/unit/utilities/: test_path_utils.py
