[project]
name = "uvm"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Chu Zhen Hao" }]
requires-python = ">=3.10"
dependencies = [
    "blake3>=1.0.8",
    "typer>=0.19.2",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]
dynamic = ["version"]

[project.scripts]
uvm = "uvm:main"
uvm-is-alive = "uvm.scripts.verify_installation:main"
[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/uvm/_version.py"

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
    "pyrefly>=0.37.0",
    "pytest>=8.4.2",
    "pytest-coverage>=0.0",
    "pytest-sugar>=1.1.1",
]
dev-extras = ["ipykernel>=7.0.1", "ipython>=8.37.0"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_files = ["src/uvm/_version.py:__version__"]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.ruff]
output-format = "concise"
show-fixes = true
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
extend-select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "FA",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "PT",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "T20",
    "UP",
]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/node_modules", "**/__pycache__", '**/*venv/**\*']
